Add German Translations
Crowdin: asdfghj
Crowdin: nazfalas

Change-Id: I0f88c1c45c0fa5a226b8b03435ed5e6890e4414b

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -20,13 +20,22 @@
     <string name="zip_folder">Ordner packen</string>
     <string name="path_string">Pfad</string>
     <string name="create">Erstellen</string>
+    <string name="rename">Umbenennen</string>
     <string name="cancel">Abbrechen</string>
     <string name="path_desc">Pfad</string>
+    <string name="path">Pfad</string>
     <string name="attach">Anhängen</string>
     <string name="delete">Löschen</string>
     <string name="copy">Kopieren</string>
     <string name="move">Verschieben</string>
+    <string name="search">Suchen</string>
+    <string name="settings">Einstellungen</string>
+    <string name="exit">Verlassen</string>
     <string name="display">Anzeigen</string>
+    <string name="extract">Entpacken</string>
+    <string name="warning">Warnung!</string>
+    <string name="mounted">Eingebunden</string>
+    <string name="create_dir">Verzeichnis erstellen</string>
     <string name="text_color">Textfarbe</string>
     <string name="text_color_desc">Ändere die bevorzugte Textfarbe</string>
     <string name="hidden_files">Zeige versteckte Dateien/Ordner</string>
@@ -41,4 +50,96 @@
     <string name="sorting">Sortierung</string>
     <string name="sorting_type">Art der Sortierung</string>
     <string name="sorting_desc">Wähle, wie die Dateien und Ordner sortiert werden</string>
+    <string name="sort_by_title">Sortieren nach...\"</string>
+    <string name="created">erstellt</string>
+    <string name="rename_target">umbenannt in</string>
+    <string name="search_summary">Nach einer Datei suchen</string>
+    <string name="multi_select_off">Mehrfach-Auswählen aus</string>
+    <string name="exit_confirm">Drücke noch einmal zurück um zu verlassen</string>
+    <string name="hidden">(versteckt)</string>
+    <string name="avail_mem">Verfügbarer Speicher</string>
+    <string name="num_processes">Anzahl der Prozesse</string>
+    <string name="audio_file">Audio-Datei</string>
+    <string name="calculating">Berechne Daten...</string>
+    <string name="empty">Leer</string>
+    <string name="white">Weiß</string>
+    <string name="magenta">Magenta</string>
+    <string name="yellow">Gelb</string>
+    <string name="red">Rot</string>
+    <string name="cyan">Zyan</string>
+    <string name="blue">Blau</string>
+    <string name="green">Grün</string>
+    <string name="change_color_title">Textfarbe ändern</string>
+    <string name="sort_by_none">Nichts</string>
+    <string name="sort_by_alphabetical">Alphabetisch</string>
+    <string name="sort_by_type">Typ</string>
+    <string name="sort_by_size">Größe</string>
+    <string name="sort_by_folders_files">Verzeichnisse-Dateien</string>
+    <string name="folder_read_error">Unzureichende Berechtigungen um das Verzeichnis zu lesen</string>
+    <string name="unzip_error">Unzureichende Berechtigungen um hier zu entpacken</string>
+    <string name="create_dir_error">Unzureichende Berechtigungen um Verzeichnisse zu erstellen</string>
+    <string name="rename_error">Konnte nicht umbenannt werden</string>
+    <string name="could_not_find_error">Konnte nicht gefunden werden</string>
+    <string name="delete_error">Löschen fehlgeschlagen</string>
+    <string name="file_copy_success">Datei erfolgreich kopiert und eingefügt</string>
+    <string name="file_copy_error">Kopieren/Einfügen fehlgeschlagen</string>
+    <string name="remount_success">Erfolgreich wiedereingebunden als</string>
+    <string name="remount_error">Wiedereinbindung fehlgeschlagen!</string>
+    <string name="select_email_app">E-Mail-Anwendung auswählen...</string>
+    <string name="email_error">Fehler beim Starten der E-Mail-App</string>
+    <string name="website_error">Fehler beim Öffnen der Webseite</string>
+    <string name="process_error">Fehler beim Starten des Prozesses</string>
+    <string name="backup_progress">Sichere Apps</string>
+    <string name="backup_success">Apps wurden gesichert</string>
+    <string name="downloaded_app_count">Du hast %s heruntergeladene Apps</string>
+    <string name="backup_count">%1$s von insgesamt %2$s Apps wurden gesichert</string>
+    <string name="extract_here">Hier entpacken</string>
+    <string name="extract_to">Entpacken nach...</string>
+    <string name="holding_file">Halte</string>
+    <string name="folders">Verzeichnis(se)</string>
+    <string name="files">Datei(en)</string>
+    <string name="items">Objekte</string>
+    <string name="holding_to_extract">Zu entpacken</string>
+    <string name="pdf_error">PDF-Anwendung nicht vorhanden</string>
+    <string name="html_error">HTML-Anwendung nicht vorhanden</string>
+    <string name="generic_error">Anwendung für Dateityp fehlt</string>
+    <string name="new_dir">Neues Verzeichnis</string>
+    <string name="free_space">Freier Speicherplatz</string>
+    <string name="folder_operations_title">Verzeichnisaktionen</string>
+    <string name="folder_delete">Verzeichnis löschen</string>
+    <string name="folder_rename">Verzeichnis umbenennen</string>
+    <string name="folder_copy">Verzeichnis kopieren</string>
+    <string name="folder_cut">Verzeichnis verschieben (ausschneiden)</string>
+    <string name="folder_zip">Verzeichnis komprimieren</string>
+    <string name="folder_paste">In Verzeichnis einfügen</string>
+    <string name="folder_extract">Hier entpacken</string>
+    <string name="file_operations_title">Dateiaktionen</string>
+    <string name="file_delete">Datei löschen</string>
+    <string name="file_rename">Datei umbennen</string>
+    <string name="file_copy">Datei kopieren</string>
+    <string name="file_cut">Datei verschieben (ausschneiden)</string>
+    <string name="file_email">Datei per E-Mail verschicken</string>
+    <string name="confirm_delete">Wirklich löschen</string>
+    <string name="help_text">Solltest du irgend welche Fragen oder Kommentare haben, schicke eine E-Mail an den Entwickler oder besuche die Webseite von SlimRoms.\n\nVielen Dank\n\n</string>
+    <string name="proc_options">Prozessoptionen</string>
+    <string name="proc_details">Details</string>
+    <string name="proc_launch">Starten</string>
+    <string name="wifi_is_enabled">WLAN ist aktiviert</string>
+    <string name="wifi_not_enabled">WLAN ist nicht aktiviert</string>
+    <string name="disable_wifi">WLAN deaktivieren</string>
+    <string name="enable_wifi">WLAN aktivieren</string>
+    <string name="wifi_disabled">Deaktiveirt</string>
+    <string name="wifi_enabled">Aktiviert</string>
+    <string name="wifi_disabling">Wird deaktiviert</string>
+    <string name="wifi_enabling">Wird aktiviert</string>
+    <string name="wifi_unknown">Unbekannt</string>
+    <string name="wifi_strength">Stärke</string>
+    <string name="wifi_not_applicable">N/V</string>
+    <string name="wifi_back">Zurück</string>
+    <string name="wifi_label_signal_strength">Signalstärke</string>
+    <string name="wifi_label_state">WLAN-Zustand</string>
+    <string name="wifi_label_ip_addr">IP-Adresse</string>
+    <string name="wifi_label_mac_addr">MAC-Adresse</string>
+    <string name="wifi_label_ssid">SSID</string>
+    <string name="wifi_label_link_speed">Verbindungsgeschwindigkeit</string>
 </resources>
