Add Spanish Translations
Crowdin: Yllelder

Change-Id: If3e379c03a8d182cf21fe6a679d7febddd1db328

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -20,13 +20,22 @@
     <string name="zip_folder">Carpeta comprimida zip</string>
     <string name="path_string">La ruta conduce aquí</string>
     <string name="create">Crear</string>
+    <string name="rename">Renombrar</string>
     <string name="cancel">Cancelar</string>
     <string name="path_desc">La ruta de acceso es</string>
+    <string name="path">Ruta</string>
     <string name="attach">Adjuntar</string>
     <string name="delete">Eliminar</string>
     <string name="copy">Copiar</string>
     <string name="move">Mover</string>
+    <string name="search">Buscar</string>
+    <string name="settings">Ajustes</string>
+    <string name="exit">Salir</string>
     <string name="display">Pantalla</string>
+    <string name="extract">Extracto</string>
+    <string name="warning">¡Advertencia!</string>
+    <string name="mounted">Montado</string>
+    <string name="create_dir">Crear directorio</string>
     <string name="text_color">Color del texto</string>
     <string name="text_color_desc">Cambiar el color de texto preferido</string>
     <string name="hidden_files">Mostrar archivos y carpetas ocultos</string>
@@ -41,4 +50,95 @@
     <string name="sorting">Ordenación</string>
     <string name="sorting_type">Tipo de ordenación</string>
     <string name="sorting_desc">Seleccione cómo desea ordenar archivos y carpetas</string>
+    <string name="sort_by_title">Ordenar por...\"</string>
+    <string name="created">creado</string>
+    <string name="rename_target">renombrado a</string>
+    <string name="search_summary">Buscar un archivo</string>
+    <string name="multi_select_off">Selección múltiple desactivada</string>
+    <string name="exit_confirm">Pulse volver de nuevo para salir</string>
+    <string name="hidden">(oculto)</string>
+    <string name="avail_mem">Memoria disponible</string>
+    <string name="num_processes">Número de procesos</string>
+    <string name="audio_file">Archivo de audio</string>
+    <string name="calculating">Calculando información...</string>
+    <string name="empty">Vacío</string>
+    <string name="white">Blanco</string>
+    <string name="magenta">Magenta</string>
+    <string name="yellow">Amarillo</string>
+    <string name="red">Rojo</string>
+    <string name="cyan">Cian</string>
+    <string name="blue">Azul</string>
+    <string name="green">Verde</string>
+    <string name="change_color_title">Cambiar color del texto</string>
+    <string name="sort_by_none">Ninguno</string>
+    <string name="sort_by_alphabetical">Por orden alfabético</string>
+    <string name="sort_by_type">Tipo</string>
+    <string name="sort_by_size">Tamaño</string>
+    <string name="folder_read_error">Permisos insuficientes para leer la carpeta</string>
+    <string name="unzip_error">Permisos insuficientes para descomprimir aquí</string>
+    <string name="create_dir_error">Permisos insuficientes para crear el directorio</string>
+    <string name="rename_error">no se puede renombrar</string>
+    <string name="could_not_find_error">No se pudo encontrar</string>
+    <string name="delete_error">Error al eliminar</string>
+    <string name="file_copy_success">Archivo copiado y pegado con éxito</string>
+    <string name="file_copy_error">No se pudo copiar/pegar</string>
+    <string name="remount_success">Remontado con éxito como</string>
+    <string name="remount_error">¡El remontado a fallado!</string>
+    <string name="select_email_app">Seleccione la aplicación de correo electrónico...</string>
+    <string name="email_error">Error al iniciar la aplicación de correo electrónico</string>
+    <string name="website_error">Error al abrir sitio web</string>
+    <string name="process_error">Error al iniciar el proceso</string>
+    <string name="backup_progress">Copia de seguridad de aplicaciones</string>
+    <string name="backup_success">Las aplicaciones han sido respaldadas</string>
+    <string name="downloaded_app_count">Tienes %s aplicaciones descargadas</string>
+    <string name="backup_count">%1$s de %2$s aplicaciones respaldadas</string>
+    <string name="extract_here">Extraer aquí</string>
+    <string name="extract_to">Extraer en...</string>
+    <string name="holding_file">Mantener</string>
+    <string name="folders">carpeta(s)</string>
+    <string name="files">archivo(s)</string>
+    <string name="items">elementos</string>
+    <string name="holding_to_extract">para extraer</string>
+    <string name="pdf_error">Falta lector PDF</string>
+    <string name="html_error">Falta visor HTML</string>
+    <string name="generic_error">Falta aplicación para el tipo de archivo</string>
+    <string name="new_dir">Nuevo directorio</string>
+    <string name="free_space">Espacio libre</string>
+    <string name="folder_operations_title">Operaciones de carpeta</string>
+    <string name="folder_delete">Eliminar carpeta</string>
+    <string name="folder_rename">Renombrar carpeta</string>
+    <string name="folder_copy">Copiar carpeta</string>
+    <string name="folder_cut">Mover(Cortar) carpeta</string>
+    <string name="folder_zip">Carpeta ZIP</string>
+    <string name="folder_paste">Pegar en la carpeta</string>
+    <string name="folder_extract">Extraer aquí</string>
+    <string name="file_operations_title">Operaciones de archivos</string>
+    <string name="file_delete">Eliminar archivo</string>
+    <string name="file_rename">Renombrar archivo</string>
+    <string name="file_copy">Copiar archivo</string>
+    <string name="file_cut">Mover(Cortar) archivo</string>
+    <string name="file_email">Archivo de correo electrónico</string>
+    <string name="confirm_delete">Estás seguro que quieres borrarlo</string>
+    <string name="help_text">Si tienes alguna pregunta o comentario, por favor envía un correo electrónico al desarrollador o visita la web de SlimRoms.\n\nGracias\n\n</string>
+    <string name="proc_options">Opciones de proceso</string>
+    <string name="proc_details">Detalles</string>
+    <string name="proc_launch">Iniciar</string>
+    <string name="wifi_is_enabled">Tu wifi está habilitado</string>
+    <string name="wifi_not_enabled">Tu wifi no está habilitado</string>
+    <string name="disable_wifi">Desactivar wifi</string>
+    <string name="enable_wifi">Activar wifi</string>
+    <string name="wifi_disabled">Desactivado</string>
+    <string name="wifi_enabled">Activado</string>
+    <string name="wifi_disabling">Desactivando</string>
+    <string name="wifi_enabling">Activando</string>
+    <string name="wifi_unknown">Desconocido</string>
+    <string name="wifi_strength">Intensidad</string>
+    <string name="wifi_not_applicable">N/A</string>
+    <string name="wifi_back">Atrás</string>
+    <string name="wifi_label_signal_strength">Intensidad de la señal</string>
+    <string name="wifi_label_state">Estado del WIFI</string>
+    <string name="wifi_label_ip_addr">Dirección IP</string>
+    <string name="wifi_label_mac_addr">Dirección MAC</string>
+    <string name="wifi_label_ssid">SSID</string>
+    <string name="wifi_label_link_speed">Velocidad de enlace</string>
 </resources>
